--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <td>
 
         From,</br> <!--address to the left side corner of the  the page-->
-        <a href="E:\Web Development Mushu\HTML Personal Site\Contact Details.html"> Contact Details</a><br /></br>
+        <a href="\Contact Details.html"> Contact Details</a><br /></br>
 
-  <img src="E:\Web Development Mushu\HTML Personal Site\Mushu pic.jpg" alt="Profilepic" height="200" width="200" /></img> <br /></br>
+  <img src="\Mushu pic.jpg" alt="Profilepic" height="200" width="200" /></img> <br /></br>
     <!--pic to the right side corner of the page-->
   To,</br><!--need gap to mention name and address which is not coming in the output-->
 
