--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <td>
 
         From,</br> <!--address to the left side corner of the  the page-->
-        <a href="/contactdetails.html"> Contact Details</a><br /></br>
+        <a href="contactdetails.html"> Contact Details</a><br /></br>
 
   <img src="mushu pic.jpg" alt="Profilepic" height="200" width="200" /></img> <br /></br>
     <!--pic to the right side corner of the page-->
@@ -223,7 +223,7 @@ Organized Fresher’s, Farewell & Industrial Visits in College Years.
 
 </table></table>
 
-<a href="/contactdetails.html"> Contact Details</a>
+<a href="contactdetails.html"> Contact Details</a>
 <hr /></hr>
 <h2><ins>Declaration:</ins></h2>
 
