--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html lang="en" dir="ltr">
 
 <head>
@@ -259,7 +259,7 @@
   </table>
   </table>
 
-  <a href="E:\Web Development Mushu\HTML Personal Site\Contact Details.html"> Contact Details</a>
+  <a href="contactdetails.html"> Contact Details</a>
   <hr />
   </hr>
   <h2><ins>Declaration:</ins></h2>
