--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html lang="en" dir="ltr">
 
 <head>
@@ -19,9 +19,9 @@
 
         From,</br>
         <!--address to the left side corner of the  the page-->
-        <a href="E:\Web Development Mushu\HTML Personal Site\Contact Details.html"> Contact Details</a><br /></br>
+        <a href="contactdetails.html"> Contact Details</a><br /></br>
 
-        <img src="E:\Web Development Mushu\HTML Personal Site\Mushu pic.jpg" alt="Profilepic" height="200" width="200" /></img> <br /></br>
+        <img src="mushu pic.jpg" alt="Profilepic" height="200" width="200" /></img> <br /></br>
         <!--pic to the right side corner of the page-->
         To,</br>
         <!--need gap to mention name and address which is not coming in the output-->
@@ -259,7 +259,7 @@
   </table>
   </table>
 
-  <a href="E:\Web Development Mushu\HTML Personal Site\Contact Details.html"> Contact Details</a>
+  <a href="contactdetails.html"> Contact Details</a>
   <hr />
   </hr>
   <h2><ins>Declaration:</ins></h2>
